--- a/src/Components/CoverPage/CoverPage.css
+++ b/src/Components/CoverPage/CoverPage.css
@@ -59,7 +59,11 @@
 .left-side ul li {
   padding: 10px;
 }
-
+.s{
+  margin-top: 2px;
+  padding: 8px;
+  color:gray
+}
 .left-side ul li a {
   color: black;
   text-decoration: none;
@@ -92,6 +96,7 @@
   color: blue;
   font-size: 30px;
   font-weight: bold;
+  /* text-align: left; */
 }
 .btn{
   background-color: blue;
